add gitignore and pdf

--- a/AMA-Chapter-1/AMA-CHAP-1.tex
+++ b/AMA-Chapter-1/AMA-CHAP-1.tex
@@ -122,7 +122,7 @@ Chapter 1: Groups I}
 Prove that the composition of functions is associative: if $X\xrightarrow{f}Y\xrightarrow{g}Z\xrightarrow{h}W$, then \begin{align*}h(gf)=(hg)f.\end{align*}
  \end{exercise}
 \begin{proof}
-     $h(gf) (x) = h(g(f(x)) = (gh)f(x)$ and here
+     $h(gf) (x) = h(g(f(x)) = (gh)f(x)$ and 
 \end{proof}
 
 \begin{exercise}{1.7}
