--- a/AMA-Chapter-1/AMA-CHAP-1.tex
+++ b/AMA-Chapter-1/AMA-CHAP-1.tex
@@ -171,12 +171,11 @@ Prove that the composite of two injections is an injection, and that the composi
         \item[(i)] Since bijective iff surjective and injective, we only need to proof $(a)$ iff $(c)$. \\
         Suppose $f$ is injective, then no two elements in $X$ are mapped to the same element, hence $|X|=|f(X)|$ or equavalently, $f$ is surjective.
 
-        \item[(ii)]
+        \item[(ii)] Consider $f:\mathbb{N} \rightarrow \mathbb{N}$ where $f(x)=x+1$. We see that $f$ is an injection, but not surjection, since $1$ does not have a preimage. This implies that injective cannot be equavalent to surjection, and hence the three statements are not equal to each other.
+        \item[(iii)] We prove the contrapositive, if each of the 500 pigeonholes contain only one pigeon, then there has to be exactly 500 pigeons. This is obvious by (i) as we have 500 pigeons to map to 500 pigeionholes, then surjectivity implies bijectivity and hence there are 500 pigeions.
     \end{enumerate}
 
 \end{proof}
-
-
 
 
 
