add section 1.4 exercises

--- a/AMA-Chapter-1/AMA-CHAP-1.tex
+++ b/AMA-Chapter-1/AMA-CHAP-1.tex
@@ -359,4 +359,104 @@ Prove that the composite of two injections is an injection, and that the composi
 
 
 
+\section*{1.4.  Lagrange's Theorem}
+
+\begin{exercise}{1.38}
+    Let $H$ be a subgroup of a group $G$.
+    \begin{enumerate}
+        \item[(i)] Prove that right cosets $Ha$ and $Hb$ are equal if and only if $ab^{-1} \in H$.
+        \item[(ii)] Prove that the relation $a \equiv b$ if $ab^{-1} \in H$ is an equivalence relation 
+        on $G$ whose equivalence classes are the right cosets of $H$.
+    \end{enumerate}
+    
+\end{exercise}
+
+
+
+
+\begin{exercise}{1.39}
+    \begin{enumerate}
+        \item[(i)] Define the $\textbf{special linear group}$ by
+        \begin{align*}
+            \text{SL}(2, \mathbb{R}) = {A \in \text{GL} (2, \mathbb{R}): \det(A)=1}.
+        \end{align*}
+        Prove that SL(2, $\mathbb{R}$) is a subgroup of GL(2, $\mathbb{R}$).
+        \item[(i)] Prove that SL(2, $\mathbb{Q}$) is a subgroup of GL(2, $\mathbb{R}$).
+    \end{enumerate}
+\end{exercise}
+
+
+
+
+\begin{exercise}{1.40}
+    \begin{enumerate}
+        \item[(i)] Give an example of two subgroups $H$ and $K$ of a group $G$ whose union $U\cupK$ is not a subgroup of G. 
+        \begin{hint}{} Let $G$ be the four-group $\textbf{V}$.
+        \item[(ii)] Prove that the union $H\cup K$ of two subgroups is itself a subgroup if and only if $H$ is a subset of $K$
+        or $K$ is a subset of $H$.
+            
+        \end{hint}
+    \end{enumerate}
+
+\end{exercise}
+
+
+\begin{exercise}{1.41}
+    Let $G$ be a finite group with subgroups $H$ and $K$. If $H\subseteq K\subseteq G$, prove that
+    \begin{align*}
+        [G:H] = [G:K][K:H].
+    \end{align*}
+\end{exercise}
+
+
+
+
+\begin{exercise}{1.42}
+    If $H$ and $K$ are subgroups of a group $G$ and $|H|$ and $|K|$ are relatively prime, prove that $H\cap K=\{1\}$.
+    \begin{hint}{}
+        If $x\in H\cap K$, then $x^{|H|} = 1 = x^{|K|}$.
+    \end{hint}
+
+\end{exercise}
+
+
+
+
+
+\begin{exercise}{1.43}
+    Let $G$ be a group of order 4. Prove that either $G$ is cyclic or $x^2=1$ for every $x\in G$. Conclude,
+    using Exercise 1.35 on page 27, that $G$ must be abelian.
+\end{exercise}
+
+
+\begin{exercise}{1.44}
+    If $H$ is a subgroup of a group $G$, prove that the number of left cosets of $H$ in $G$ is equal to the number of right
+    cosets of $H$ in $G$.
+    \begin{hint}{}
+        The function $\varphi: aH \mapsto Ha^{-1}$ is a bijection from the family of all left cosets of $H$
+        to the family of all right cosets of $H$.
+    \end{hint}
+
+\end{exercise}
+
+
+
+\begin{exercise}{1.45}
+    If $p$ is an odd prime and $a_1,...,a_{p-1}$ is a permutation of $\{1,2,...,p-1\}$, prove that
+    there exists $i \neq j$ with $ia_i \equiv ja_j \mod p$.
+    \begin{hint}{}
+        Use Wilson's Theorem.
+    \end{hint}
+\end{exercise}
+
+
 \end{document}
+
+
+
+
+
+
+
+
+
